Fix alignment for items in Section 1

--- a/styles.css
+++ b/styles.css
@@ -12,44 +12,61 @@ body {
     flex: 1;
 }
 
-.logo-text {
-    color: #f9faf8;
-    font-size: 24px;
-}
+/* Page sections are numbered 1-4 vertically, top to bottom, followed by the footer */
 
-.header-links {
-    font-size: 18px;
-}
-
-a {
-    color: #e5e7eb;
-}
+/*** Section 1 ***/
 
 .top-section {
     background-color: #1F2937;
     display: flex;
-    padding: 16px 160px 120px 160px;
+    padding: 80px 160px;
+    gap: 36px;
 }
 
 .top-section-left, .top-section-right {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    justify-content: space-between;
+    padding-bottom: 48px;
 }
 
 .top-section-left {
-    padding-right: 16px;
-    margin-bottom: 6px;
-    justify-content: space-between;
-    align-items: flex-start;  
+     align-items: flex-start;  
 }
 
 .top-section-right {
-    padding-left: 8px;
-    justify-content: space-between;
     align-items: flex-end;
 }
 
+.logo {
+    color: #f9faf8;
+    font-size: 24px;
+}
+
+button {
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-size: 18px;
+    width: 100px;
+    height: 36px;
+    border: none;
+    border-radius: 4px;
+}
+
+.header-links {
+    display: flex;
+    gap: 16px;
+    font-size: 18px;
+}
+
+a {
+    color: #e5e7eb;
+    text-decoration: none;
+}
+
+
+/*** Section 2 ***/
 
 .main-text {
     color: #f9faf8;
@@ -70,6 +87,8 @@ a {
     min-height: 210px;
     background-color: slategray;
 }
+
+/*** Section 3 ***/
 
 .info-section {
     background-color: #ffffff;
@@ -110,6 +129,8 @@ a {
     text-align: center;
 }
 
+/*** Section 4 ***/
+
 .quotes-section {
     background-color: #e5e7eb;
 }
@@ -129,15 +150,14 @@ a {
     align-items: center;
 }
 
-.sign-up, button {
-    background-color: #3882f6;
-}
-
 .sign-up {
+    background-color: #3882f6;
     width: 500px;
     padding: 40px;
     margin: 60px;
 }
+
+/*** Footer ***/
 
 .footer {
     color: #e5e7eb;
